--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -38,7 +38,7 @@
     </select>
 </div>
 <div class="clearfix"></div>
-<div class="dictionary dictionary-minify">
+<div class="dictionary">
     <div class="text-block">
     </div>
    
