--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -100,7 +100,7 @@
 	
 			<div class="center-content clearfix"></div>
 
-			<div class="dictionaries-section clearfix dictionaries-section-minify">
+			<div class="dictionaries-section clearfix">
 			</div>
 			<div class="functions-language functions-language-mini">
 				<h3>My settings</h3>
