--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -94,7 +94,7 @@
 		<div class="middle-section">
 		<div class="top-line clearfix">
 				<div class="allocation">
-					<p>Click unknown word to see its translation</p>
+					<p>Click unknown word to see its translation<span class="close-cross"></span></p>
 				</div>
 		</div>
 	
