fixes scroll menu, landscape

--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -6,7 +6,7 @@
     <h5 class="left-title-save">Save words to</h5>
     <h5 class="left-title-auto">Autosave</h5>
     <h5 class="left-title-show">Show dictionary</h5>
-    <h5 class="left-title-word">Highlight words:</h5>
+    <h5 class="left-title-word">Highlight words</h5>
 </div>
 <div class="right-col-func">
     <select class='right-col-func-select-1'>
@@ -38,7 +38,7 @@
     </select>
 </div>
 <div class="clearfix"></div>
-<div class="dictionary">
+<div class="dictionary ">
     <div class="text-block">
     </div>
    
