--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -3593,7 +3593,74 @@ input[type=range]::-webkit-slider-runnable-track {
 
 
 
+@media screen and (min-width: 901px) and (max-width: 1100px) { 
+.dictionaries-section {
+    right: 7%;
+    height: 354px;
+    width: 280px;
+    margin-left: 0px;
+    height: 362px;
+  } 
+.menu {
+  width: 600px;
 
+}   
+.center-content {
+  width: 560px;
+}
+.top-line {
+  width: 600px;
+}
+.word-cancel, .word-delete {
+  width: 140px;
+  top: 440px;
+}
+.functions-language {
+    right: 7%;
+margin-left: 0px;
+width: 280px;
+margin-top: 159px;
+height: 268px;
+}
+.functions-settings-news {
+  margin-top: 30px;
+  height: 100px;
+  overflow-x: hidden;
+}
+.slider-check2 {
+  position: relative;
+  left: 80px;
+  right: 0px;
+    bottom: 47px;
+}
+.slider-check {
+  right: 75px;
+}
+#blue-header {
+  width: 100%;
+}
+.main-hedaer{
+  max-width: 950px;
+}
+#center-block {
+  width: 100%;
+}
+.left-title-word {
+  left: 58px;
+}
+.functions-news-title {
+ margin-top: -20px;
+}
+.functions-language h3 {
+  width: 260px;
+}
+.dictionary {
+  height: 264;
+}
+.word-delete {
+  right: 72px;
+}
+}
 
 
 
@@ -4213,27 +4280,17 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (min-width: 901px) and (max-width: 1100px) { 
-.dictionaries-section {
-    right: 0.8%;
-    height: 354px;
-    width: 280px;
-    margin-left: 0px;
-  } 
-  
 }
+}
+
+
+
+
+
+
+
+  
+
 
 
 
