--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -87,8 +87,13 @@
 					<!--<li><a href="#category/economics"><span>Economics</span></a></li>-->
 					<!--<li><a href="#category/sport"><span>Sport</span></a></li>-->
 					<li><a href="#category/science"><span>Science</span></a></li>
+						<li><a href="#category/science"><span>Science</span></a></li>
+							<li><a href="#category/science"><span>Science</span></a></li>
+								<li><a href="#category/science"><span>Science</span></a></li>
 					<li><a href="#category/tech"><span>Technology</span></a></li>
-					<li><a href="#category/culture"><span>Culture</span></a></li
+					<li><a href="#category/culture"><span>Culture</span></a></li>
+					<li><a href="#category/culture"><span>Culture</span></a></li>
+					<li><a href="#category/culture"><span>Culture</span></a></li>
 				</ul>
 			</div>	
 		<div class="middle-section">
