--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -246,7 +246,7 @@ p{
 	text-decoration: underline;
 }
 .menu li{
-	float: left;
+	display: inline-block;
 	padding-top: 9px;
 	padding-bottom: 9px;
 	
@@ -275,10 +275,14 @@ p{
 	text-align: left;
 	background: #f6f6f6;
 	margin-top: 60px;
-	width: 639px;
+	width: 640px;
+	height: 30px;
 	position: fixed;
 	z-index: 1200;
 	top: 0px;
+	overflow: hidden;
+	    overflow-x: scroll;
+  white-space:nowrap;
 	
 }
 #blue-header {
@@ -1201,19 +1205,31 @@ p{
 	margin-bottom: 0;
 	padding-bottom: 10px;
 }
-::-webkit-scrollbar {
+::-webkit-scrollbar:horizontal {
     width: 4px;
 }
- 
+ ::-webkit-scrollbar:vertical {
+   width: 4px;
+}
 /* Track */
-::-webkit-scrollbar-track {
+::-webkit-scrollbar-track:horizontal {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
- 
+::-webkit-scrollbar-track:vertical {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
 /* Handle */
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb:horizontal {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #dbdbdb; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:vertical {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: #dbdbdb; 
@@ -1222,6 +1238,7 @@ p{
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: rgba(255,0,0,0.4); 
 }
+
 #wrapper{
 	display: none;
 }
