landscape responsive fix, ipad fix

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -2030,6 +2030,8 @@ input[type=range]::-webkit-slider-runnable-track {
   height: 160px;
   overflow-x: hidden;
 }
+.original-article-link {
+	display: block;
 }
 
 
