--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Upvoc</title>
-	<link href="/css/myapp.css" rel="stylesheet">
-	<link href="/css/media-queries.css" rel="stylesheet">
+	<link href="public/css/myapp.css" rel="stylesheet">
+	<link href="public/css/media-queries.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
