New mobile markup

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Upvoc</title>
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<link href="/css/myapp.css" rel="stylesheet">
 	<link href="/css/media-queries.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -11,11 +12,7 @@
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="bg-container">
-			
-		</div>
-<div id="blue-header"></div>
-<div id="center-block">
+<div class="center-block">
 <div id="content-wrapper">	
 <div id="pc-container">
 	<div class="background">
@@ -67,7 +64,6 @@
 					</div>
 					</div>
 				<div class="enter"></div>
-				<div class="showsettings"><span class="showspan">Show my translations</span></div>
 			</div>
 			</div>
 		<div class="translate-window">
@@ -153,7 +149,9 @@
 			</div>
 			</div>
 			</div>
-</div>
+
+	</div>
+	<div class="showsettings"><span class="showspan">Show my translations</span></div>
 			<script src="/js/myapp.js"/>
 	<!-- Yandex.Metrika counter -->
 
