--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1553,18 +1553,6 @@ p{
 	font: 14px/20px 'Helvetica-Bold', sans-serif;
 	cursor: pointer;
 }
-.bg-container {
-	background: black;
-	opacity: 0.7;
-	z-index: 98;
-	position: absolute;	
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: none;
-
-}
 .functions-language {
 	width: 310px;
 	float: right;
@@ -1992,7 +1980,7 @@ input[type=range]::-webkit-slider-runnable-track {
 	color: white;
 	cursor: pointer;
 }
-#center-block {
+.center-block {
 	width: 1000px;
 	margin: 0 auto;
 }
