--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,17 +22,18 @@
 	<div class="background">
 	 <div class="main-header clearfix">
 		<div class="logo">
-			<a href="#">upvoc</a>
+			<a href="/">upvoc</a>
 			<p class="logo-p">improve your <br> english vocabulary</p>
 		</div>
 			<div class="lang-select">
 			<span>My language:</span>
-					<select class='switch-lang'>
-					<option value="1">Russian</option>
-					<option value="2">English</option>
-					<option value="3">Grech</option>
-					<option value="4">Turkish</option>
-					<option value="5">Spanish</option>	
+                <select class='switch-lang'>
+                    <option value="chinese">Chinese</option>
+                    <option value="arabic">Arabic</option>
+                    <option value="portugal">Portugal</option>
+                    <option value="russian">Russian</option>
+                    <option value="spanish">Spanish</option>
+                    <option value="turkish">Turkish</option>
 				</select>
 			</div>
 			<div class="enter-block">
@@ -83,9 +84,9 @@
 				<ul class="menu clearfix">
 					<li><a href="#category/world"><span>World</span></a></li>
 					<li><a href="#category/politics"><span>Politics</span></a></li>
-					<!--<li><a href="#category/social"><span>Social</span></a></li>-->
-					<!--<li><a href="#category/economics"><span>Economics</span></a></li>-->
-					<!--<li><a href="#category/sport"><span>Sport</span></a></li>-->
+					<li><a href="#category/social"><span>Social</span></a></li>
+					<li><a href="#category/economics"><span>Economics</span></a></li>
+					<li><a href="#category/sport"><span>Sport</span></a></li>
 					<li><a href="#category/science"><span>Science</span></a></li>
 					<li><a href="#category/tech"><span>Technology</span></a></li>
 					<li><a href="#category/culture"><span>Culture</span></a></li
