--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -1,5 +1,5 @@
 <div class="dict-title">
-    <h3><a>My dictionaries</a></h3>
+    <h3>My dictionaries</h3>
 </div>
 <div class="functions">
 <div class="left-col-func">
